--- a/The_iron_will-main/The_iron_wall/Saved/Config/WindowsEditor/Engine.ini
+++ b/The_iron_will-main/The_iron_wall/Saved/Config/WindowsEditor/Engine.ini
@@ -65,6 +65,7 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
+GlobalNetTravelCount=7
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
@@ -75,5 +76,5 @@ NDKPath=(Path="")
 JavaPath=(Path="")
 
 [GameNetDriver StatelessConnectHandlerComponent]
-CachedClientID=9
+CachedClientID=92
 
